--- a/views/attendanceHistory.ejs
+++ b/views/attendanceHistory.ejs
@@ -1,6 +1,3 @@
-
-
-
 <%-include('partials/Header')%>
 <link rel="stylesheet" href="/styles/dataTable.css">
 <main class="d-flex flex-nowrap" style="align-self: center;">
@@ -14,7 +11,7 @@
               </a>
               <p style="padding-right: 10px !important; margin: 0;"> > </p>
               <a href="#" class="nav-link ">
-                  <b> Payroll </b>
+                  <b> Attendance Periods </b>
               </a>
             </div>
             <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
@@ -97,15 +94,35 @@
               </div>
             <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
             <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
-            <select name="p_group" id="projectSelect" class="rounded-1 custom-select">
-              <% Object.values(group.result).forEach(group =>{%> 
-                <option value="<%=group._id%>" <%=(query.p_group === group._id) ? 'selected': ''%>><%=group.fund_cluster%> - <%=group.project_name%> <%=(group.program_name)? + "- " + group.program_name: ''%></option>
-              <%}); %>
+            <a id='btnCreate_AttendanceHistory' class="btn btn-primary" href="#" ==> Create DTR </a>
+            <script>
+              const createPayroll = document.querySelector('#btnCreate_AttendanceHistory');
+
+              const gFrom = document.querySelector('input[type="date"]#from');
+              const gTo = document.querySelector('input[type="date"]#to');
+              //get all the values
               
-            </select>
-            
+              
+              createPayroll.addEventListener('click', async (e) => {
+                e.preventDefault();
+                const values = {
+                  from: gFrom.value,
+                  to: gTo.value,
+                }
+                const data = await fetch('/admin/api/attendance/history', {
+                  method: 'POST',
+                  headers: {
+                    'Content-Type': 'application/json'
+                  },
+                  body: JSON.stringify(values)
+                })
+
+                const result = await data.json()
+                console.log(result)
+              });
             </script>
-            <button type="submit" class="btn btn-primary">Submit</button>        </form>
+            
+        </form>
     </div>
 
     <div class="d-flex table-container"> 
@@ -113,26 +130,19 @@
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th>Employee ID</th>
-                    <th>Employee</th>
-                    <th>Payroll Group</th>
-                    <th>Gross Amount Earned</th>
-                    <th>Net Amount Due</th>
+                    <th>Attendance Period</th>
+                    <th>No. of Attendances</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
               <%if(data.result){%>
-                <% Object.values(data.result).forEach(user =>{%> 
+                <% Object.values(data.result).forEach(attendance =>{%> 
                   <tr>
-                      <td><%=user.emp_code%></td>
-                      <td><%=user.name%></td>
-                      <td><%=user.payroll_group.fund_cluster%> - <%=user.payroll_group.project_name%> <%=(user.payroll_group.program_name) ? +  '/ ' + user.payroll_group.program_name : ''%></td>
-                      <td><%=user.salaries.gross_salary%></td>
-                      <td><%=user.salaries.net_salary%></td>
-                      <td >
-                          <a href="/admin/payroll/<%=user.emp_code%>/payslip?from=<%=query.from%>&to=<%=query.to%>">Payslip</a>
-                          <a href="/admin/payroll/receipt?from=<%=query.from%>&to=<%=query.to%>&p_group=<%=user.payroll_group._id%>">Payroll</a>
+                      <td><%=moment(attendance.date_from).format('MMMM')%> <%=moment(new Date(attendance.date_from)).local().date()%>-<%=(moment(attendance.date_to).format('MMMM') === moment(attendance.date_from).format('MMMM')) ? moment(new Date(attendance.date_to)).local().date() : moment(attendance.date_to).format('MMMM') + " " +  moment(new Date(attendance.date_to).local()).date()%> <%=moment(attendance.date_to).year()%></td>
+                      <td><%=attendance.attendances.length%></td>
+                      <td>
+                          <a href="/admin/attendance/history/dtr?id=<%=attendance._id%>">Print</a>
                       </td>
                   </tr>
                   <%}); %>
