attendance period per employee template and api done

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23,6 +23,11 @@ a{
 .nav-link:hover{
     color:#424158;
 }
+
+.nav-item .nav-link{
+    border-top-left-radius : .25rem !important;
+    border-top-right-radius : .25rem !important;
+}
 table{
     border-collapse: collapse;
 }
