--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -6,25 +6,16 @@
 <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style=" border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Attendance </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
+        <div class="" style="width:100%">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a href="/admin/attendance" class="nav-link rounded-1 active">Attendance</a>
+                </li>
+                <li class="nav-item ">
+                    <a href="/admin/attendance/history" class="nav-link rounded-1 ">Attendance Periods</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="d-flex gap-4"> 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
@@ -96,8 +87,17 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
+    <div class="d-flex justify-content-between"> 
+        <div class="" style="width:100%">
+            <ul class="nav nav-tabs">
+                <li class="nav-item ">
+                    <a href="/admin/attendance/history" class="nav-link rounded-1 active">All Attendance</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="d-flex  table-container"> 
-    
+        
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
