--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -1,4 +1,3 @@
-
 <div class="d-flex flex-column justify-content-between flex-shrink-0 p-3" style="width: 280px; height: 100vh; padding: 0 !important; position: sticky;
   top: 0;">
   <div>
@@ -27,7 +26,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="/admin/attendance/history">Attendance Periods</a>
-        <a class="dropdown-item" href="/admin/attendance">Attendance Details</a>
+        <a class="dropdown-item" href="/admin/attendance/">Attendance</a>
       </div>
     </li>
     <li class="nav-item dropdown position-static">
@@ -112,6 +111,7 @@
         position: static !important;
         transform: none !important;
       }
+      
       </style>
     </li>
   </ul>
