--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -5,18 +5,19 @@
 
 <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style=" border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
-    <div class="d-flex justify-content-between"> 
-        <div class="" style="width:100%">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a href="/admin/attendance" class="nav-link rounded-1 active">Attendance</a>
-                </li>
-                <li class="nav-item ">
-                    <a href="/admin/attendance/history" class="nav-link rounded-1 ">Attendance Periods</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    
+    <%-include('partials/navBar.ejs', {data:{
+            attendance: {
+                url: '/admin/attendance/all',
+                name: 'Attendance'
+            },
+            attendancePeriod:{
+                url: '/admin/attendance/history/all',
+                name: 'Attendance Periods'
+            },
+        },
+    })%>
+
     <div class="d-flex gap-4"> 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
@@ -87,15 +88,13 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-    <div class="d-flex justify-content-between"> 
-        <div class="" style="width:100%">
-            <ul class="nav nav-tabs">
-                <li class="nav-item ">
-                    <a href="/admin/attendance/history" class="nav-link rounded-1 active">All Attendance</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <%-include('partials/navBar.ejs', {data:{
+            attendance: {
+                url: '/admin/attendance/all',
+                name: 'All Attendance'
+            }
+        },
+    })%>
     <div class="d-flex  table-container"> 
         
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
