--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -25,8 +25,8 @@
         Manage Attendance 
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="/admin/attendance/history">Attendance Periods</a>
-        <a class="dropdown-item" href="/admin/attendance/">Attendance</a>
+        <a class="dropdown-item" href="/admin/attendance/all">Attendance</a>
+        <a class="dropdown-item" href="/admin/attendance/history/all">Attendance Periods</a>
       </div>
     </li>
     <li class="nav-item dropdown position-static">
