--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -10,7 +10,7 @@
 </style>
 <div class="d-flex p-2 justify-content-center align-items-center" style="height: 100vh;">
     
-    <div class="container-sm " style="max-width: 500px; background: #F5F5F5; border: solid #efeff3 1px;padding: 60px 0px 60px 0px;">
+    <div class="container-sm rounded 1 shadow" style="max-width: 500px; background: #F5F5F5; border: solid #efeff3 1px;padding: 60px 0px 60px 0px;">
 
         <form class="d-flex justify-content-center flex-column "> 
 
