--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -5,7 +5,7 @@
             <main>
                 <div class="container dashboard">
                     <div class="attendance-container">
-                        <div class="attendance-component box-shadow components">
+                        <div class="attendance-component box-shadow components rounded-1">
                             <div class="date_time box-shadow">
                                 <label for="date">
                                     <%=currentDate%>
