--- a/views/timeAttendance.ejs
+++ b/views/timeAttendance.ejs
@@ -4,10 +4,10 @@
 <div class="wrapper">
     <main>
         <form action="javascript:void(0)">
-        <div class="container">
+        <div class="shadow container rounded-1">
             <div class="timeButton">
-                <div class="timeInEl bg-box-secondary-color selected" data-id="timein">Time In</div>
-                <div class="timeOutEl bg-box-secondary-color " data-id="timeout">Time Out</div>
+                <div class="timeInEl bg-box-secondary-color rounded-1 selected" data-id="timein">Time In</div>
+                <div class="timeOutEl bg-box-secondary-color rounded-1 " data-id="timeout">Time Out</div>
             </div>
         </div>
     
@@ -16,12 +16,12 @@
             <label for="" ><%=currentDate%></label>
         </div>
     
-        <div class="container main">
+        <div class=" shadow container main rounded-1">
             <div class="imgContainer">
-                <div class="imgSubContainer">
+                <div class="imgSubContainer rounded-1">
                     <img src="/img/no-image.png" alt="PROFILE" class="img">
                 </div>
-                <div class="infoSubContainer ">
+                <div class="infoSubContainer rounded-1">
                     <label for="" class="name" >NAME</label>
                     <div class="name">
                         <label for="" class="labelName">~</label>
