--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -1,39 +1,83 @@
 <%-include('partials/Header')%>
 <link rel="stylesheet" href="/styles/dataTable.css">
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
+<main class="d-flex flex-nowrap" style=" align-self: center;">
 
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Employees </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
-
+<main class="d-flex flex-nowrap" style=" align-self: center;">
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em;gap:1.5em; overflow: auto; ">
+    <%-include('partials/navBar.ejs', {data:{
+            employees: {
+                url: '/admin/employees/all',
+                name: 'Employees'
+            }
+        },
+    })%>
+    <div class="d-flex gap-4 "> 
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>Monthly Salary</p>
+                <p style="font-size:1.5rem;"><b>P</b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>Semi-Monthly Salary</p>
+                <p style="font-size:1.5rem;"><b>P</b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+          <div class="d-flex flex-column justify-content-around">
+             <p>Deduction</p>
+             <p style="font-size:1.5rem;"><b>P</b></p>
+          </div>
+          <div class="d-flex">
+             <p></p>
+             <p class="mt-auto p-2 bd-highlight">Totals</p>
+          </div>
+     </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>Gross Pay</p>
+                <p style="font-size:1.5rem;"><b>P</b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>Net Pay</p>
+                <p style="font-size:1.5rem;"><b></b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+      </div>
     
-    <div class="d-flex filterContainer rounded-1 gap-3 justify-content-center">
+    <div class="d-flex filterContainer rounded-1 gap-3">
         <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add New Employee</a>
         <a id='btnAdd_payrollType' class="btn btn-primary" href="#" data-toggle="modal" data-target="#modal" onclick="addPayrollTypeModal('','','payroll_types', `<%=include('partials/bodies/payrollTypes-editbody', {payroll_type: group, employees: data})%>`)"> Add Payroll Type </a>
     </div>
     <%-include('partials/Modal') %> 
-    
-    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; min-width:1200px"> 
+        <%-include('partials/navBar.ejs', {data:{
+                employees: {
+                    url: '/admin/employees/all',
+                    name: 'All Employees'
+                }
+            },
+        })%>
+    <div class="d-flex  table-container"> 
         <style>
             tr td:first-child:hover{
                 cursor: pointer;
@@ -44,7 +88,7 @@
             }
            
         </style>
-     
+           
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
