--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,128 +1,18 @@
 <%-include('partials/Header')%>
-<style>
-    @import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
-
-    *{font-family: 'Barlow', sans-serif;  color: #67668A; }
-    body{
-        font-size: 14px;
-    }
-    .active{
-        border-radius: 0 !important;
-        background: #67668A !important;
-        color: white !important;
-    }
-    .dataTables_wrapper{
-        font-family: 'Barlow', sans-serif;
-        background-color: #F8F8F8;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.current{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button:hover{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
-      background: none !important;
-      color: #67668A !important;
-    }
-    tbody, td, tfoot, th, thead, tr {
-    border: 0;
-    }
-    table.dataTable{
-        border-collapse: collapse;
-    }
-    
-    table.dataTable thead tr{
-        vertical-align:middle;
-    }
-    table.dataTable thead th, table.dataTable thead td {text-align: center;}
-    table.dataTable thead th, table.dataTable thead td {
-        border:0;
-    }   
-    table.dataTable thead th, table.dataTable thead td {
-        
-        height: 5px;
-    }   
-    table.dataTable.no-footer {
-        border-bottom: 1px solid #dddddd;
-    }
-    table.dataTable tbody td {
-        vertical-align: middle;
-        border: 1px solid #dddddd;
-        background-color: #FFFEFE;
-        word-wrap: break-word;         /* All browsers since IE 5.5+ */
-        overflow-wrap: break-word;
-        
-    }
-    table.dataTable tbody td:first-child {
-        border-left: 0;
-    }
-    table.dataTable tbody td:last-child {
-        border-right: 0;
-    }
-    
-    th:first-child {
-      border-left: 1px solid #dddddd;
-    }
-    #payroll_wrapper{
-        padding: 1em 0;
-        border: 1px solid #dddddd;
-        border-radius: 0.25rem;
-        width: 100%;
-    }
-    #payroll_length, #payroll_info{
-        margin-left: 15px;
-    }
-    #payroll_filter, #payroll_paginate{
-        margin-right: 15px;
-    }
-
-    #payroll_legth, #payroll_filter{
-        margin-bottom: 15px;
-    }
-
-    #payroll_info, #payroll_paginate{
-        margin-top: 15px;
-    }
-
-    .table-striped>tbody>tr:nth-of-type(odd)>* {
-    --bs-table-accent-bg: #FFFEFE;
-    color: var(--bs-table-striped-color);
-    }
-    p
-    /* table.dataTable thead tr th{
-        border: 1px solid #dddddd;
-    } */
-</style>
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
+<link rel="stylesheet" href="/styles/dataTable.css">
+<main class="d-flex flex-nowrap" style="align-self: center;">
 
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Dashboard </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto; ">
+    <%-include('partials/navBar.ejs', {data:{
+            dashBoard: {
+                url: '/admin/',
+                name: 'Dashboard'
+            }
+        },
+    })%>
 
-    <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
+    <div class="d-flex gap-4" > 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
                 <p>Employees</p>
