--- a/views/leaveTypes.ejs
+++ b/views/leaveTypes.ejs
@@ -6,27 +6,13 @@
 </style>
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Holidays </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
+    <%-include('partials/navBar.ejs', {data:{
+            employees: {
+                url: '/admin/leaveTypes',
+                name: 'Leave Types'
+            }
+        },
+    })%>
 
     <div class="d-flex gap-4 mr-4"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
@@ -53,6 +39,13 @@
 
     <!-- modal -->
     <%-include('partials/Modal') %> 
+    <%-include('partials/navBar.ejs', {data:{
+            employees: {
+                url: '/admin/leaveTypes',
+                name: 'All Leave Types'
+            }
+        },
+    })%>
     <div class="d-flex overflow-auto gap-4 justify-content-between" >
 
         <div class="overflow-auto  table-container" style="width:100%;  "> 
