--- a/views/payrollGroups.ejs
+++ b/views/payrollGroups.ejs
@@ -6,27 +6,21 @@
 </style>
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Payroll Groups </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p> 
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
+    <%-include('partials/navBar.ejs', {data:{
+            payroll: {
+                url: '/admin/payroll/all',
+                name: 'Payroll'
+            },
+            payrollPeriods:{
+                url: '/admin/payroll/history/all',
+                name: 'Payroll Periods'
+            },
+            payrollGroups:{
+            url: '/admin/payroll/groups/all',
+            name: 'Payroll Groups'
+            } 
+        },
+    })%>
 
     <div class="d-flex gap-4 mr-4" style="padding-top: 25px !important;"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
@@ -50,6 +44,13 @@
            </div>
       </div>
     </div>
+    <%-include('partials/navBar.ejs', {data:{
+        payroll: {
+            url: '/admin/payroll/groups/all',
+            name: 'All Payroll Groups'
+        }
+      },
+    })%>
 
     <!-- modal -->
     <%-include('partials/Modal') %> 
