--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -7,30 +7,16 @@
 
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Travel Pass </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
+    <%-include('partials/navBar.ejs', {data:{
+            travelPass: {
+                url: '/admin/travelpass',
+                name: 'Travelpass'
+            }
+        },
+    })%>
 
     <div class="d-flex gap-4"> 
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+      <div class="d-flex justify-content-between flex-fill rounded-1 shadow" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
@@ -40,7 +26,7 @@
               <p class="mt-auto p-2 bd-highlight">Totals</p>
            </div>
       </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+      <div class="d-flex justify-content-between flex-fill rounded-1 shadow" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Upcoming Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
@@ -52,6 +38,13 @@
       </div>
     </div>
     <%-include('partials/Modal') %> 
+    <%-include('partials/navBar.ejs', {data:{
+            travelPass: {
+                url: '/admin/travelpass',
+                name: 'All Travelpass'
+            }
+        },
+    })%>
     <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between">
 
         <div class="overflow-auto  table-container" style="width:100%;  "> 
@@ -87,7 +80,7 @@
                 </tfoot>
             </table>
         </div>
-        <div class="sideContainer rounded-1">
+        <div class="sideContainer rounded-1 shadow">
             <div class="overflow-auto" > 
                 <form id="asideForm" action="" class="d-flex flex-column gap-2">
                     <h1>Add Travel Pass</h1>
